--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
             sub2unlock.com<br>
             sub4unlock.io<br>
             rekonise.com<br>
-            bit.ly</p>
+            bit.ly<br>
+            platoboost.com(Delta)</p>
         </section>
     </main>
-    </footer>
+
     <script src="assets/js/scripts.js" type="text/javascript"></script>
 </body>
 
