--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             sub4unlock.io<br>
             rekonise.com<br>
             bit.ly<br>
-            platoboost.com(Delta)</p>
+            platoboost.com(Delta)<br>
+            flux.li(Fluxus)</p>
         </section>
     </main>
 
