--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             sub4unlock.io<br>
             rekonise.com<br>
             bit.ly<br>
+            paster.so<br>
             platoboost.com(Delta)<br>
             flux.li(Fluxus)</p>
         </section>
