--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </header>
     
     <div class="background-animation">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-</div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </div>
 
     <main>
         <dialog id="bypassPopup">
@@ -77,6 +77,11 @@
           </p>
         </section>
     </main>
+
+
+    <section style="text-align: center; margin-top: 10px;">
+        <img src="assets/img/Credits.png" alt="Credits" style="width: 270px; height: auto; margin-top: -20px;"/>
+    </section>
 
     <script src="assets/js/scripts.js" type="text/javascript"></script>
 </body>
